crates/markdown-neuraxis-syntax/src/snapshots/inlines/strong_asterisk.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..16
  PARAGRAPH@0..16
    STRONG@0..15
      STAR@0..1 "*"
      STAR@1..2 "*"
      TEXT@2..8 "strong"
      WHITESPACE@8..9 " "
      TEXT@9..13 "text"
      STAR@13..14 "*"
      STAR@14..15 "*"
    NEWLINE@15..16 "\\n"
